PyMaker/datas/object2/RawHTML/i16601/Python_DOC_referPages.syntaxerror-invalid-syntax-using-path-to-file-in-with-open.txt
<div class="post-text" itemprop="text">
<p>I'd like to write something to 'impf_rel.txt' which is located at 'C:\Abaqus_JOBS\Reliability\Job'. I wrote:</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\Job\\impf_rel.txt', 'w')
    text_file.write("%s" % '#imp_local\n')
    text_file.write("%s" % '#imp_global')
</code></pre>
<p>And I get:</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\Job\\impf_rel.txt', 'w')
                                            ^
                                            SyntaxError: invalid syntax
</code></pre>
<p>Both the directory and the file name are correct and they exist. Can you help me with this error? Thanks</p>
<p>EDIT:
If I ask alternatively:</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\impfrel.txt', 'w')
    text_file.write("%s" % '#imp_local\n')
    text_file.write("%s" % '#imp_global')
</code></pre>
<p>I still get an error:</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\impfrel.txt', 'w')
                                            ^
                                            SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You forgot a <code>:</code> at the end</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\Job\\impf_rel.txt', 'w') as file_handler:
#                                                                                ^
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You forgot to place <code>as text_file:</code> at the end of the with-statement:</p>
<pre><code>with open('C:\\Abaqus_JOBS\\Reliability\\Job\\impf_rel.txt', 'w') as text_file:
    text_file.write("%s" % '#imp_local\n')
    text_file.write("%s" % '#imp_global')
</code></pre>
<p>Here is a reference on <a href="https://docs.python.org/3/reference/compound_stmts.html#the-with-statement" rel="nofollow">Python's with-statement</a>.</p>
</div>
<span class="comment-copy">Yes of course! Thanks!</span>
<span class="comment-copy">You are welcome !</span>
<span class="comment-copy">Thank you for your time and support! I couldn't see the missing ':'.</span>
